--- a/templates/ListingsResult.tmpl
+++ b/templates/ListingsResult.tmpl
@@ -6,7 +6,7 @@
     	</div>
 	</div>
 	<div class="listingInfoOutside">
-        <h6><%= title %></h6>
+        <h6><%= short_title %></h6>
         <h6>Only $<%= price %>!</h6>
 	</div>
 <!-- </a> -->
