--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body > * {
 .centerArea {
     text-align: center;
     position: absolute;
-    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
     width: 100%;
@@ -400,7 +400,7 @@ body > * {
     height: 95vh;
     overflow: hidden;
     border-radius: 10px;
-    border: 2px solid rgb(212, 175, 55);
+    border: 2px solid rgb(146, 140, 120);
     background-color: rgb(41, 35, 26);
     color: white;
     z-index: 4;
@@ -422,7 +422,7 @@ body > * {
     width: 100%;
     overflow: hidden;
     border-radius: 10px;
-    border: 2px solid silver;
+    border: 2px solid rgb(146, 140, 120);
     background-color: rgba(70, 70, 70, 0.7);
     margin-bottom: 0.5em;
 }
@@ -430,8 +430,6 @@ body > * {
     position: absolute;
     width: 100%;
     height: 100%;
-    -moz-box-shadow: inset 0 0 10px #000000;
-    -webkit-box-shadow: inset 0 0 10px #000000;
     box-shadow: inset 0 0 10px #000000;
 }
 .imageDiv {
@@ -479,20 +477,27 @@ body > * {
 }
 .listingTitle * {
     color: white;
+    line-height: 1;
+    margin-bottom: 5;
 }
-.sellerBox {
+.otherInfo {
     display: block;
     position: relative;
     width: 100%;
-    min-height: 7vh;
-    padding-left: 10vw;
+    min-height: 14vh;
+}
+.sellerBox {
+    display: inline-block;
+    width: 80%;
+    padding-top: 1vh;
+    padding-left: 8vw;
     line-height: 1;
-    text-indent: 1px;
     transform: scale(0.86);
+    position: relative;
 }
 .sellerBox img {
     position: absolute;
-    left: 2%;
+    left: -5%;
     width: 7vw;
     min-width: 45px;
     border-radius: 50%;
@@ -500,7 +505,7 @@ body > * {
     padding: 2% 0;
 }
 .sellerText {
-    padding-left: 15px;
+    /*padding-left: 15px;*/
 }
 .sellerText p {
     line-height: 1;
@@ -511,9 +516,21 @@ p span {
     color: yellow;
     margin-right: -5px;
 }
-.listingTitle h4, .listingTitle h6 {
+.uniqueness {
+    position: absolute;
+    top: -2;
+    right: 5;
+    width: 24%;
+    max-width: 75px;
     line-height: 1;
-    margin-bottom: 5;
+    text-align: center;
+    padding: 8px;
+    padding-left: 11px;
+    padding-top: 6px;
+    background-color: rgb(253, 197, 127);
+    border: 3px solid beige;
+    color: black;
+    border-radius: 40px;
 }
 /* ---------------------------- */
 
@@ -529,26 +546,72 @@ p span {
 .descriptionBox {
     display: block;
     width: 97%;
-    height: 25vh;
+    height: 24vh;
     line-height: 1.1;
     padding: 10px 15px;
     text-align: justify;
     overflow-y: scroll;
     border-radius: 10px;
     margin: 0 0.25em;
-    background-color: RGB(185, 170, 151);
-    color: auto;
+    background-color: rgb(185, 170, 151);
+    color: black;
     border-radius: 10px;
-    border: 1px solid silver;
+    border: 1px solid rgb(146, 140, 120);
     letter-spacing: 0.4px;
+    box-shadow: inset 0 0 10px #000000;
 }
-.uniqueness {
-    display: inline-block;
+.descriptionBox::-webkit-scrollbar {
+    background: transparent;
+}
+.scrollable-content::-webkit-scrollbar-thumb {
+    background: black !important;
 }
 .etsyLink {
     display: inline-block;
-    padding: 1em 1em;
+    padding: 4% 12%;
+    min-width: 307px;
     text-align: center;
+}
+.etsyButton {
+    display: inline-block;
+    text-align: center;
+    border-radius: 7px;
+    padding: 0.25em 0.5em;
+    background-color: rgb(227, 72, 0);
+    color: white;
+    vertical-align: middle;
+    font-family: serif;
+    border: 1px solid rgb(192, 163, 116);
+}
+/* ---------------------------- */
+
+/*       Outside the Hover      */
+
+/* ---------------------------- */
+
+.closeButton {
+    display: block;
+    position: fixed;
+    top: 2.5%;
+    left: 85%;
+    transform: translate(-50%, -50%);
+    border-radius: 12px;
+    z-index: 5;
+    background-color: rgb(87, 78, 66);
+    color: rgb(213, 213, 213);
+    padding: 2px;
+    text-indent: 1;
+    border: 2px solid rgb(146, 140, 120);
+}
+.shareItem {
+    display: none;
+    position: fixed;
+    top: 51.5%;
+    left: 86%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    background-color: grey;
+    z-index: 5;
 }
 .socialLinks a, .etsyLink a {
     text-decoration: none;
@@ -560,22 +623,6 @@ a img {
     width: 20px;
     vertical-align: middle;
     border-radius: 2px;
-}
-.etsyButton {
-    display: inline-block;
-    text-align: center;
-    border-radius: 7px;
-    padding: 0.25em 0.5em;
-    background-color: RGB(227, 72, 0);
-    color: white;
-    vertical-align: middle;
-    font-family: serif;
-}
-.closeButton {
-    display: block;
-    position: absolute;
-    border-radius: 50px;
-    width: 10px;
 }
 /* ---------------------------- */
 
