--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 *, *:after, *:before {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
+    transition: all linear;
 }
 body > * {
     font-family: serif;
@@ -30,8 +31,11 @@ body > * {
     color: white;
     display: block;
     min-height: 100vh;
-    background-color: salmon;
+    /*background-color: salmon;*/
     background-attachment: fixed;
+    background-image: url('../images/pattern.jpg');
+    background-size: cover;
+    /*opacity: 0.6;*/
     position: fixed;
     background-position: center;
     top: 0;
@@ -50,11 +54,23 @@ body > * {
     left: 50%;
     width: 100%;
 }
-.centerArea h1, .centerArea h4 {
+.centerArea img {
+    width: 100%;
+    max-width: 572px;
+}
+.centerArea h4 {
     color: white;
 }
 .searchBox {
     color: black;
+}
+.downArrow {
+    display: block;
+    position: absolute;
+    top: 92%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3em;
 }
 /* ---------------------------- */
 
@@ -70,8 +86,10 @@ body > * {
     display: block;
     width: 100%;
     margin: 0 auto;
-    background-color: gray;
+    background-color: rgb(41, 35, 26);
     min-height: 100px;
+    color: rgb(185, 170, 151);
+    font-size: 0;
 }
 .mainHeader.active {
     position: fixed;
@@ -81,24 +99,43 @@ body > * {
 }
 .title {
     display: inline-block;
+    padding: 2.5vh 0 2vh;
+    padding-left: 4vh;
     width: 35%;
-    font-size: 1.2em;
-    vertical-align: middle;
+    font-size: 1.2rem;
+    vertical-align: top;
+}
+.title img {
+    max-width: 100%;
+    max-height: 68px;
 }
 .menuDrop {
     display: inline-block;
     width: 24%;
+    font-size: 1rem;
     text-align: center;
+    vertical-align: top;
+    padding-top: 10%;
+}
+.menuButton {
+    display: block;
+    border-radius: 10px;
+    border: 1px solid rgb(185, 170, 151);
+    width: 60%;
+    margin: 0 auto;
 }
 .navBar {
     display: none;
     width: 30%;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1rem;
+    vertical-align: top;
+    padding-top: 3%;
 }
 .rightSection {
     display: inline-block;
     width: 38%;
+    font-size: 1rem;
     overflow: hidden;
 }
 .topLinks {
@@ -109,13 +146,19 @@ body > * {
 .searchBar {
     vertical-align: middle;
     display: block;
+    padding-top: 5%;
     text-align: right;
+    width: 95%;
+    float: right;
 }
 .sBox {
     width: 71%;
 }
 .sButton {
     width: 18%;
+}
+.mainHeader hr {
+    margin-bottom: 1%;
 }
 /* ---------------------------- */
 
@@ -143,11 +186,12 @@ body > * {
 
 .sideBar {
     display: none;
-    background-color: darkgray;
+    background-color: rgb(185, 170, 151);
     width: 19%;
     height: 100vh;
     vertical-align: top;
     margin-top: 0;
+    color: rgb(39, 31, 18);
 }
 .sideBar.active {
     position: fixed;
@@ -160,11 +204,13 @@ body > * {
     width: 100%;
     text-align: center;
     padding: 0.5em;
-    background-color: purple;
+    background-color: rgb(202, 147, 104);
+    border: 2px solid rgb(202, 147, 104);
 }
 .categories {
     display: block;
     width: 100%;
+    margin-top: -32;
 }
 #Categories {
     padding: 1em;
@@ -243,6 +289,15 @@ body > * {
 }
 .listingInfoInside h5, .listingInfoInside h6 {
     margin-bottom: 0;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 1);
+}
+.listingInfoInside h5 {
+    font-size: 1em;
+}
+.listingInfoInside h6 {
+    margin-top: 0.5em;
+    font-size: 0.88em;
 }
 .listingInfoOutside {
     display: inline-block;
@@ -269,10 +324,20 @@ body > * {
     .contentBlock.active {
         padding-left: 0;
     }
+    .title {
+        padding: 2.5% 0 2vh 1%;
+    }
+    .menuDrop {
+        padding-top: 7%;
+    }
+    .topLinks {
+        font-size: 0.8em;
+    }
 }
-@media (min-width: 600px) and (max-width: 700px) {
+@media (min-width: 600px) and (max-width: 750px) {
     .navBar {
-        font-size: 1em;
+        font-size: 0.8rem;
+        padding-top: 5%;
     }
     .rightSection {
         width: 30%;
@@ -290,6 +355,9 @@ body > * {
     }
 }
 @media (min-width: 501px) and (max-width: 850px) {
+    .mainHeader {
+        padding-top: 2%;
+    }
     .listingsDestination {
         width: 100%;
     }
@@ -305,18 +373,20 @@ body > * {
 }
 @media (min-width: 600px) {
     .title {
-        width: 30%;
+        width: 25%;
         font-size: 1.5em;
+        padding-top: 2%;
     }
     .menuDrop {
         display: none;
     }
     .navBar {
         display: inline-block;
-        width: 38%;
+        width: 41%;
+        padding-top: 3%;
     }
     .rightSection {
-        width: 30%;
+        width: 33%;
     }
     .listingsDestination {
         padding: 0.5em;
@@ -325,7 +395,7 @@ body > * {
         display: inline-block;
     }
     .contentBlock {
-        width: 80%;
+        width: 79%;
     }
 }
 @media (min-width: 700px) and (max-width: 850px) {
@@ -363,6 +433,9 @@ body > * {
     }
     .contentBlock.active {
         padding-left: 13.5%
+    }
+    .navBar {
+        padding-top: 3%;
     }
 }
 /* ---------------------------- */
@@ -434,14 +507,33 @@ body > * {
 }
 .imageDiv {
     display: block;
+    position: relative;
     background-color: blue;
     width: 100%;
     height: 30vh;
     overflow: hidden;
+    font-size: 0;
 }
 .imageDiv img {
     width: 100%;
     min-height: 100%;
+}
+.imageDivLeft {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    width: 50%;
+    height: 100%;
+}
+.imageDivRight {
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    width: 50%;
+    height: 100%;
+}
+.imageDivRight:hover .arrowRight {
+    background-color: orange;
 }
 .arrowLeft {
     position: absolute;
@@ -603,6 +695,11 @@ p span {
     padding: 2px;
     text-indent: 1;
     border: 2px solid rgb(146, 140, 120);
+}
+.closeButton:hover {
+    background-color: rgb(184, 176, 165);
+    color: rgb(139, 125, 125);
+    animation: 5s linear;
 }
 .shareItem {
     display: none;
