--- a/templates/ListingsResult.tmpl
+++ b/templates/ListingsResult.tmpl
@@ -1,5 +1,5 @@
 <!-- <a href = "#/listing/<%=listing_id%>"> -->
-	<div class="Listing" style="background-image: url(<%= MainImage.url_fullxfull %>)">
+	<div class="Listing" style="background-image: url(<%= MainImage.url_fullxfull %>)" id="<%= listing_id%>">
    		<div class="listingInfoInside">
        		<h5><%= short_title %></h5>
         	<h6>Only $<%= price %>!</h6>
