--- a/templates/IndividualListing.tmpl
+++ b/templates/IndividualListing.tmpl
@@ -1,14 +1,16 @@
 <div class="leftSide">
     <div class="imageBox">
         <div class="shadowDiv"></div>
-        <div class="arrowLeft"><i class="fa fa-chevron-left"></i>
-        </div>
-        <div class="arrowRight"><i class="fa fa-chevron-right"></i>
-        </div>
         <div class="imageDiv">
-            <div class="imageDivLeft"></div>
-            <img src="http://placekitten.com/g/800/600">
-            <div class="imageDivRight"></div>
+            <div class="imageDivLeft">        
+                <div class="arrowLeft"><i class="fa fa-chevron-left"></i>
+            </div>
+        </div>
+        <img src="http://placekitten.com/g/800/600">
+            <div class="imageDivRight">
+                <div class="arrowRight"><i class="fa fa-chevron-right"></i>
+                </div>
+            </div>
         </div>
         <div class="listingTitle">
             <h4>
