whole mess of functionality additions

--- a/templates/IndividualListing.tmpl
+++ b/templates/IndividualListing.tmpl
@@ -6,7 +6,7 @@
                 <div class="arrowLeft"><i class="fa fa-chevron-left"></i>
             </div>
         </div>
-        <img src="http://placekitten.com/g/800/600">
+        <img src="<%= Images[0].url_fullxfull %>">
             <div class="imageDivRight">
                 <div class="arrowRight"><i class="fa fa-chevron-right"></i>
                 </div>
