--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,9 @@ body > * {
     vertical-align: top;
     padding-top: 3%;
 }
+.navBar span {
+    cursor: pointer;
+}
 .rightSection {
     display: inline-block;
     width: 38%;
@@ -211,7 +214,12 @@ body > * {
     width: 100%;
     text-align: center;
     padding: 0.5em 0;
-    background-color: rgb(202, 147, 104);
+}
+.ps_on_BG {
+    background-color: rgb(172, 141, 117);
+}
+.ps_off_BG {
+    background-color: rgb(185, 170, 151);
 }
 .priceButton {
     display: block;
@@ -219,6 +227,16 @@ body > * {
     border: 1px solid black;
     margin: 0 auto;
     padding: 0 1em;
+    cursor: default;
+    background: -moz-linear-gradient(top, #d6be94 0%, #a16e5c);
+    background: -webkit-gradient(linear, left top, left bottom, from(#d6be94), to(#a16e5c));
+}
+.priceButton:hover {
+    background-color: rgb(2, 4, 1);
+}
+.priceButton:active {
+    background: -moz-linear-gradient(top, #d6be94 0%, #634b38 50%, #a16e5c);
+    background: -webkit-gradient(linear, left top, left bottom, from(#d6be94), color-stop(0.50, #634b38), to(#a16e5c));
 }
 .categories {
     display: block;
@@ -227,11 +245,13 @@ body > * {
 }
 #Categories {
     padding: 1em;
+    cursor: default;
 }
 #Categories li {
     list-style-type: none;
     padding-left: 1em;
     font-size: 0.9em;
+    cursor: pointer;
 }
 #Categories li:hover {
     background-color: rgb(85, 70, 51);
@@ -307,13 +327,26 @@ body > * {
 .Listing:hover {
     filter: grayscale(0%);
 }
+.saleBanner {
+    display: none;
+    position: absolute;
+    top: 30;
+    right: -43;
+    background-color: rgb(255, 223, 155);
+    border: 1px solid;
+    text-align: center;
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+    transform: rotate(45deg);
+    width: 63%;
+}
 .listingInfoInside {
     display: none;
     position: absolute;
     bottom: 0;
     padding: 5% 7.5%;
     width: 100%;
-    min-height: 79px;
+    height: 79px;
     background-color: rgba(0, 0, 0, 0.5);
 }
 .listingInfoInside h5, .listingInfoInside h6 {
@@ -321,6 +354,9 @@ body > * {
     color: white;
     font-weight: 100;
     text-shadow: 0px 1px 1px black;
+}
+.priceDisplay {
+    display: none;
 }
 .listingInfoInside h5 {
     font-size: 1em;
@@ -331,6 +367,7 @@ body > * {
     text-align: right;
     font-size: 0.68em;
 }
+
 .listingInfoOutside {
     display: inline-block;
     padding-left: 0.4em;
@@ -571,7 +608,7 @@ body > * {
     height: 100%;
 }
 .imageDivLeft:hover .arrowLeft {
-    background-color: rgba(0,0,255,0.2);
+    background-color: rgba(0, 0, 255, 0.2);
 }
 .imageDivRight {
     display: inline-block;
@@ -581,7 +618,7 @@ body > * {
     height: 100%;
 }
 .imageDivRight:hover .arrowRight {
-    background-color: rgba(0,0,255,0.2);
+    background-color: rgba(0, 0, 255, 0.2);
 }
 .arrowLeft {
     position: absolute;
