--- a/templates/ListingsResult.tmpl
+++ b/templates/ListingsResult.tmpl
@@ -1,12 +1,13 @@
 <!-- <a href = "#/listing/<%=listing_id%>"> -->
 	<div class="Listing" style="background-image: url(<%= MainImage.url_fullxfull %>)" id="<%= listing_id%>">
+      <div class="saleBanner">Sale Item</div>
    		<div class="listingInfoInside">
-       		<h5><%= short_title %></h5>
-        	<h6>Only $<%= price %>!</h6>
+       		<h5><span title="<%= title %>"><%= short_title %></span></h5>
+        	<h6 class="priceDisplay">Only $<%= price %>!</h6>
     	</div>
 	</div>
 	<div class="listingInfoOutside">
-        <h6><%= short_title %></h6>
+        <h6><span title="<%= title %>"><%= short_title %></span></h6>
         <h6>Only $<%= price %>!</h6>
 	</div>
 <!-- </a> -->
