--- a/templates/ListingsResult.tmpl
+++ b/templates/ListingsResult.tmpl
@@ -1,5 +1,6 @@
 <!-- <a href = "#/listing/<%=listing_id%>"> -->
-	<div class="Listing" style="background-image: url(<%= MainImage.url_fullxfull %>)" id="<%= listing_id%>">
+	<div class="Listing" style="background-image: url(<%= MainImage.url_fullxfull %>)">
+      <div class="clickSurface" id="<%= listing_id%>"></div>
       <div class="saleBanner">Sale Item</div>
    		<span title="<%= title %>"><div class="listingInfoInside">
        		<h5><%= short_title %></h5>
